# jumanji

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
demo/: demo.md  links.md
docs/: DESIGN.md  DEVLOG.md  TESTING.md  demo.md
docs/research/: 01-landscape.md  02-zathura.md  03-rust-stack.md
lua/jumanji/: init.lua  reverse.lua
packaging/aur/: .SRCINFO  PKGBUILD
resources/: config.example.toml  jumanji.desktop
src/: main.rs
src/core/: command.rs  config.rs  diagram.rs  editor.rs  fence.rs  highlight.rs  history.rs  jumplist.rs  keymap.rs  marks.rs  math.rs  mod.rs  pipeline.rs  source.rs  toc.rs
src/core/assets/: style.css
src/core/assets/math/: styles.css
src/core/assets/math/font/: LICENSE.fonts
src/shell/: app.rs  bar.rs  dbus.rs  mod.rs  stdin.rs  toc.rs  view.rs  watch.rs
tests/: e2e.rs
