[package]
name = "jumanji"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
comrak = "0.53.0"
gtk = { version = "0.11.4", package = "gtk4", features = ["v4_14"] }
merman = "0.7.0"
notify = "8.2.0"
notify-debouncer-full = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
syntect = "5.3.0"
thiserror = "2.0.18"
toml = "1.1.2"
two-face = "0.5.1"
webkit6 = "0.6.1"
