[package]
name = "jumanji"
version = "1.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
comrak = "0.53.0"
gtk = { version = "0.11.4", package = "gtk4", features = ["v4_14"] }
merman = { version = "0.7.0", features = ["render"] }
notify = "8.2.0"
notify-debouncer-full = "0.7.0"
pulldown-latex = "0.7.1"
serde = { version = "1.0.228", features = ["derive"] }
syntect = "5.3.0"
thiserror = "2.0.18"
toml = "1.1.2"
two-face = "0.5.1"
webkit6 = "0.6.1"

# Dependencies at opt-level 2 even in dev builds: the content pipeline (comrak,
# syntect, merman) is 10-20x slower unoptimized, which makes `cargo run` starts
# and live reloads drag. The workspace crate itself stays at opt-level 0 for
# fast incremental rebuilds.
[profile.dev.package."*"]
opt-level = 2
